improvement/Change Lab - had unfinished things